--- a/afazer/blueprints/webui/templates/menu_usuario.html
+++ b/afazer/blueprints/webui/templates/menu_usuario.html
@@ -1,52 +1,60 @@
-{% extends "bootstrap/base.html" %}
-{% block title %}{{config.get('TITLE')}}{% endblock %}
+{% extends "base.html" %}
 
-{% block navbar %}
-<style>
-    a{
-    float: right;
-    }
-</style>
 
-<div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
+{% block content %}
+<form method="post" action="/usuario/">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Mudar Status</h5>
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
 
-                    <div  class="navbar-menu">
-                        <div class="navbar-end">
-                            <a href="{{ url_for('webui.sair') }}" class="navbar-item">
-                                Sair
-                            </a>
+            <div class="modal-body">
 
+                <div class="card">
+
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label><b> Status </b></label>
+
+                            <select type="text" name="status"
+                                    class="form-control custom-select" id="status" required>
+                                <option value="" selected="selected" disabled="disabled">
+                                    Selecione um status
+                                </option>
+                                <option value="Por Fazer">Por Fazer</option>
+                                <option value="Fazendo">Fazendo</option>
+                                <option value="Finalizado">Finalizado</option>
+
+                            </select>
+                            <div class="invalid-feedback">
+
+                            </div>
+                            <br>
                         </div>
                     </div>
                 </div>
-            </nav>
+
+            </div>
+            <div class="modal-footer">
+
+                <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">
+                    Cancelar
+                </button>
+                <button class="btn btn-primary btn-sm" name="id" value="{{id}}"> Confirmar
+                </button>
+
+            </div>
         </div>
+
+    </div>
+
+
+</form>
+
+
 {% endblock %}
-
-{% block content %}
-<div class="container">
-<h1>{{config.get('TITLE')}}</h1>
-
-<div class="jumbotron">
-<ul class="list-group">
-        <h2>Suas Atividades</h2>
-    {% for atividade in atividades %}
-    <li class="list-group-item">
-        <p class="text-capitalize">{{ atividade["nome"] }}</p>
-        <select class="form-control">
-          <option>A fazer</option>
-          <option>Fazendo</option>
-          <option>Finalizado</option>
-        </select>
-    </li>
-    {% endfor %}
-</ul>
-</div>
-
-</div>
-{% endblock %}
-
-
-
